--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "antd": "^3.24.3",
+    "axios": "^0.19.0",
+    "ioredis": "^4.14.1",
     "isomorphic-unfetch": "3.0.0",
     "koa": "^2.11.0",
     "koa-router": "^7.4.0",
@@ -23,6 +25,7 @@
     "styled-components": "^4.4.1"
   },
   "devDependencies": {
+    "@types/ioredis": "^4.0.18",
     "@types/koa": "^2.0.51",
     "@types/koa-router": "^7.0.42",
     "@types/koa-session": "^5.10.1",
