--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "koa-router": "^7.4.0",
     "koa-session": "^5.12.3",
     "next": "latest",
+    "next-redux-saga": "^4.0.2",
     "next-redux-wrapper": "^4.0.1",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.1",
     "styled-components": "^4.4.1"
   },
   "devDependencies": {
