--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "antd": "^3.24.3",
     "axios": "^0.19.0",
+    "dayjs": "^1.8.16",
     "ioredis": "^4.14.1",
     "isomorphic-unfetch": "3.0.0",
     "koa": "^2.11.0",
+    "koa-body": "^4.1.1",
     "koa-router": "^7.4.0",
     "koa-session": "^5.12.3",
     "next": "latest",
