--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "koa-body": "^4.1.1",
     "koa-router": "^7.4.0",
     "koa-session": "^5.12.3",
+    "lru-cache": "^5.1.1",
     "next": "latest",
     "next-redux-saga": "^4.0.2",
     "next-redux-wrapper": "^4.0.1",
@@ -33,6 +34,7 @@
     "@types/koa": "^2.0.51",
     "@types/koa-router": "^7.0.42",
     "@types/koa-session": "^5.10.1",
+    "@types/lru-cache": "^5.1.0",
     "@types/next-redux-wrapper": "^2.0.2",
     "@types/node": "^12.7.8",
     "@types/react": "^16.9.3",
